static/styles/art-overlay.css
.no-scroll {
    overflow: hidden;
}

.lightbox-container {
    position: fixed;
    width: 100vw;
    height: 100vh;
    inset: 0;

    display: flex;
    justify-content: center;
    align-items: center;
    z-index: 10;

    background: linear-gradient(
        in oklab,
        rgba(0, 0, 0, 0.5) 0%,
        rgba(13, 13, 13, 0.7) 20%,
        rgba(34, 34, 34, 0.9) 50%,
        rgba(18, 14, 16, 0.98) 100%);

    /* background: radial-gradient(circle at center, rgba(20, 20, 20, 0.5) 0%, rgba(10, 10, 10, 1) 100%); */
    
    /* background: rgba(0, 0, 0, 0.9); */

    /* background-image: url("https://www.transparenttextures.com/patterns/carbon-fibre.png"); */
    
    backdrop-filter: blur(5px) saturate(80%);
    -webkit-backdrop-filter: blur(5px) saturate(80%);

    opacity: 0;
    visibility: hidden;
    pointer-events: none;
    transition: opacity 0.3s ease, visibility 0.3s ease;

    backface-visibility: hidden;
    transform: translateZ(0);
    will-change: opacity, visibility;
}

.lightbox-container.active {
    opacity: 1;
    visibility: visible;
    pointer-events: auto;
}

.lightbox-content {
    display: flex;
    flex-direction: row;
    
    width: 100vw;
    height: 100vh;
    overflow: hidden;
    
    align-items: stretch; 
}

.lightbox-left {
    flex: 9;
    height: 100%;
    display: flex;
    justify-content: center;
    align-items: center;

    overflow: hidden;

    color: #eee;

    position: relative;
}

.lightbox-right {
    flex: 10;

    overflow-y: auto;

    /* background: #ffffff1b; */
    color: #eee;
}

#lightbox-carousel {
    height: 100vh;
    width: 75%;

    display: flex;
    gap: 80px;
    grid-auto-flow: column;
    grid-auto-columns: 100%;
    
    justify-content: start;
    align-items: center;
    overflow: hidden;
}

#lightbox-carousel img, #lightbox-carousel video  {
    max-width: 100%;
    max-height: 85%;
    object-fit: contain;
    /* border-left: 1px solid transparent;
    border-right: 1px solid transparent;
    box-sizing: border-box; */

    display: block;
    margin-left: auto;
    margin-right: auto;

    transition: transform 0.5s cubic-bezier(0.25, 1, 0.5, 1);
    will-change: transform;

    transform: translateX(calc(
        (var(--offset, 0) * -100%) - (var(--offset, 0) * 80px)
    ));
}

#markdown-content {
    padding-right: 10%;
    padding-left: 4%;
    padding-top: 12.8vh;
    line-height: 1.8;
}

#markdown-content h1, #markdown-content h2, #markdown-content h3 {
    color: #eee;
}

.text-header {
    
}

.text-tagline {
    margin-top: -2em;
}

.text-date {
    margin-top: -.5em;
    font-size: small;
    color: #eeeeeec6
}

.text-body {
    margin-top: 2em;
}


.carousel-button {
    position: absolute;
    top: 50%;
    width: 8.8%;
    transform: translateY(-50%);
    z-index: 10;
    background: rgba(255, 255, 255, 0);
    color: rgba(255, 255, 255, 0.15);
    border: none;
    padding: 20px 10px;
    cursor: pointer;
    font-size: 2rem;
    transition: background 0.2s, color 0.2s, opacity 0.1s;
    
    display: flex;
    /* align-items: center; */
    justify-content: center;

    font-size: 60px;
}

.carousel-button:hover {
    background: rgba(255, 255, 255, 0.05);
    color: rgba(255, 255, 255, .5);
}

.prev { left: 2%; border-radius: 25px; }
.next { right: 2%; border-radius: 25px; }

.carousel-button.is-hidden {
    opacity: 0;
    visibility: hidden;
    pointer-events: none;
}

.lightbox-back-bar {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    /* height: 130px; */
    height: 18vh;
    opacity: 0;

    transition: opacity 0.2s;
    pointer-events: auto;
}

.lightbox-back-bar:hover {
    opacity: 1;
}

.bar-gradient {
    width: 100%;
    height: 100%;
    display: block;
}

.bar-arrow {
    width: 15vh;
    height: 15vh;
    top: -8px;
    left: 12px;
    position: fixed;
}

